--- a/index.html
+++ b/index.html
@@ -62,60 +62,66 @@
             <div class="regala">
                 <div>
                     <div>
-                        <div>
+                        <div class="dentro">
                             <img src="imagenes/palomitas.jpg" alt="palomitas">
                         </div>
-                        <div>
-                            <h3>¡Regala momentos de cine!</h3>
-                        </div>
-                        <div>
-                            <p>Descubre las nuevas tarjetas regalo
-                                ¡que se pueden canjear tanto por.
-                                entradas de cine como productos de
-                                bar. Ala venta en todos nuestros</p>
-                        </div>
-                        <div>
-                            <p>Más información</p><i class="fa-solid fa-angle-right"></i>
+                        <div class="dentro2">
+                            <div class="reg">
+                                <h3>¡Regala momentos de cine!</h3>
+                            </div>
+                            <div>
+                                <p>Descubre las nuevas tarjetas regalo
+                                    ¡que se pueden canjear tanto por.
+                                    entradas de cine como productos de
+                                    bar. Ala venta en todos nuestros</p>
+                            </div>
+                            <div class="info">
+                                <p>Más información</p><i class="fa-solid fa-angle-right"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div>
                     <div></div>
                     <div>
-                        <div>
+                        <div class="dentro">
                             <img src="imagenes/palomitas.jpg" alt="palomitas">
                         </div>
-                        <div>
-                            <h3>¡Regala momentos de cine!</h3>
-                        </div>
-                        <div>
-                            <p>Descubre las nuevas tarjetas regalo
-                                ¡que se pueden canjear tanto por.
-                                entradas de cine como productos de
-                                bar. Ala venta en todos nuestros</p>
-                        </div>
-                        <div>
-                            <p>Más información</p><i class="fa-solid fa-angle-right"></i>
+                        <div class="dentro2">
+                            <div class="reg">
+                                <h3>¡Regala momentos de cine!</h3>
+                            </div>
+                            <div>
+                                <p>Descubre las nuevas tarjetas regalo
+                                    ¡que se pueden canjear tanto por.
+                                    entradas de cine como productos de
+                                    bar. Ala venta en todos nuestros</p>
+                            </div>
+                            <div class="info">
+                                <p>Más información</p><i class="fa-solid fa-angle-right"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div>
                     <div></div>
                     <div>
-                        <div>
+                        <div class="dentro">
                             <img src="imagenes/palomitas.jpg" alt="palomitas">
                         </div>
-                        <div>
-                            <h3>¡Regala momentos de cine!</h3>
-                        </div>
-                        <div>
-                            <p>Descubre las nuevas tarjetas regalo
-                                ¡que se pueden canjear tanto por.
-                                entradas de cine como productos de
-                                bar. Ala venta en todos nuestros</p>
-                        </div>
-                        <div>
-                            <p>Más información</p><i class="fa-solid fa-angle-right"></i>
+                        <div class="dentro2">
+                            <div class="reg">
+                                <h3>¡Regala momentos de cine!</h3>
+                            </div>
+                            <div>
+                                <p>Descubre las nuevas tarjetas regalo
+                                    ¡que se pueden canjear tanto por.
+                                    entradas de cine como productos de
+                                    bar. Ala venta en todos nuestros</p>
+                            </div>
+                            <div class="info">
+                                <p>Más información</p><i class="fa-solid fa-angle-right"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
